--- a/hw5/hw5.html
+++ b/hw5/hw5.html
@@ -129,7 +129,7 @@ function init() {
   //lighting = new THREE.AmbientLight(0x888888); // soft white light
 
   lighting = new THREE.SpotLight(0x888888);
-  lighting.position.set(60, 200, 80);
+  lighting.position.set(100, 150, 80);
   scene.add(lighting);
 
   lighting.angle = Math.PI / 6;
@@ -160,8 +160,12 @@ function init() {
 
 
 //---------------------
+  THREE.ImageUtils.crossOrigin = '';  // no space between a pair of single quotes
+
+  texture = THREE.ImageUtils.loadTexture("https://i.imgur.com/9b0zGn9.jpg");
+
   var floor = new THREE.Mesh( new THREE.PlaneGeometry(200, 200, 140, 140), new THREE.MeshPhongMaterial({
-    color: 0x404040
+    map: texture
   }));
   floor.rotation.x=-Math.PI/2;
   scene.add(floor);
@@ -175,8 +179,14 @@ function init() {
   floor.receiveShadow = true;
   
   table = buildTable();
-  table.castShadow = true;
-  table.receiveShadow = true;  
+  table.traverse(
+    function(mesh){
+      if(mesh instanceof THREE.Mesh){
+        mesh.castShadow = true;
+        mesh.receiveShadow = true;
+      }
+    }
+  )  
 
   table.position.z=20;
   scene.add(table);
@@ -268,6 +278,7 @@ function obj(){
 			function(mesh) {
 				if (mesh instanceof THREE.Mesh) {
 					mesh.material.side = THREE.DoubleSide;
+          mesh.castShadow = true;
 				}
 		});
 
@@ -295,6 +306,7 @@ function obj(){
       function(mesh) {
         if (mesh instanceof THREE.Mesh) {
           mesh.material.side = THREE.DoubleSide;
+          mesh.castShadow = true;
         }
     });
 
@@ -383,6 +395,21 @@ function buildButton(){
   pickables.push(button.obj);
   pickables.push(buttonr.obj);
 
+  controller.traverse(
+    function(mesh){
+      if(mesh instanceof THREE.Mesh){
+        mesh.castShadow = true;
+      }
+    }
+  )
+  
+  controllerr.traverse(
+    function(mesh){
+      if(mesh instanceof THREE.Mesh){
+        mesh.castShadow = true;
+      }
+    }
+  )
 
 
 }
