--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ td {
   <tr>
     <td><a href="https://hsinminn.github.io/CG_homework/hw4/hw4.html">2017/12/10 HW4</a><br>OBJ model, Kinematic Drive,<br> Rectangle-Circle Intersection, Dual Viewports</td>
     <td><a href="https://hsinminn.github.io/CG_homework/hw5/hw5.html">2017/12/22 HW5</a><br>class, shadowmap, raycaster</td>
-    <td>HW6<br></td>
+    <td><a href="https://hsinminn.github.io/CG_homework/hw6/hw6.html">2017/1/4 HW6</a><br>GLSL Shader</td>
   </tr>
 
 </table>	
