--- a/hw6/hw6.html
+++ b/hw6/hw6.html
@@ -44,6 +44,7 @@ body {
   uniform int shading;
   uniform int coordinate;
   varying vec3 color;
+
 	
   void perVertexShading(vec3 objpos, vec3 worldpos, vec3 eyepos) {
     if (coordinate == 0) {
@@ -66,13 +67,13 @@ body {
 
   // your homework
   void perPixelShading() {
-   
   }
   
   void main() {
-	gl_Position = projectionMatrix* modelViewMatrix * vec4( position, 1.0);
+	  gl_Position = projectionMatrix* modelViewMatrix * vec4( position, 1.0);
     vec4 worldpos = modelMatrix * vec4 (position, 1.0);
     vec4 eyepos = modelViewMatrix * vec4 (position, 1.0);
+
      
   	if (shading == 0)  // per-vertex shading
     	perVertexShading(position, worldpos.xyz, eyepos.xyz);
@@ -83,8 +84,10 @@ body {
 
 <script id="myFragmentShader" type="x-shader/x-fragment">
   varying vec3 color;
+
 	void main() {
 		gl_FragColor = vec4 (color, 1.0);
+
 	}
 </script>
 
@@ -102,6 +105,15 @@ $('#coords').change( function() {
 	}
 });
 
+$('#shading').change( function() {
+  console.log ( $(this).val() );
+  let objType = $(this).val();
+  if (objType === 'perVertex') {
+    teapotMaterial.uniforms.shading.value = 0;
+  } else if (objType === 'perPixel') {
+    teapotMaterial.uniforms.shading.value = 1;
+  } 
+});
 
 var scene, renderer, camera;
 var controls;
